fix overlay scrolling, position of modal, error when two loading icons were visible instead of one

--- a/addon/styles/addon.css
+++ b/addon/styles/addon.css
@@ -161,10 +161,11 @@
 .ember-modal-dialog.emd-in-place {
   position: static;
 }
+
 .ember-modal-wrapper.emd-static.emd-wrapper-target-attachment-center .ember-modal-dialog {
-  top: 50%;
+  top: 10%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, 0);
 }
 .ember-modal-wrapper.emd-animatable.emd-wrapper-target-attachment-center {
   width: 100vw;
